--- a/package.json
+++ b/package.json
@@ -24,43 +24,44 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@remix-run/node": "0.17.5",
-    "@remix-run/react": "0.17.5",
-    "@remix-run/vercel": "0.17.5",
-    "fathom-client": "3.0.0",
-    "react": "18.0.0-alpha-d5de45820-20210714",
-    "react-dom": "18.0.0-alpha-d5de45820-20210714",
-    "react-router": "6.0.0-beta.0",
-    "react-router-dom": "6.0.0-beta.0",
-    "remix": "0.17.5",
+    "@remix-run/node": "0.18.0-pre.1",
+    "@remix-run/react": "0.18.0-pre.1",
+    "@remix-run/vercel": "0.18.0-pre.1",
+    "fathom-client": "3.1.0",
+    "node-fetch": "2.6.1",
+    "react": "18.0.0-alpha-b9964684b-20210824",
+    "react-dom": "18.0.0-alpha-b9964684b-20210824",
+    "react-router": "6.0.0-beta.2",
+    "react-router-dom": "6.0.0-beta.2",
+    "remix": "0.18.0-pre.1",
     "remix-utils": "1.0.2",
-    "type-fest": "1.2.2"
+    "type-fest": "2.1.0"
   },
   "devDependencies": {
     "@mcansh/eslint-config": "3.1.0",
-    "@remix-run/dev": "0.17.5",
-    "@types/node": "16.3.2",
-    "@types/react": "17.0.14",
+    "@remix-run/dev": "0.18.0-pre.1",
+    "@types/node": "16.7.2",
+    "@types/react": "17.0.19",
     "@types/react-dom": "17.0.9",
-    "@types/web": "0.0.8",
-    "@typescript-eslint/eslint-plugin": "4.28.3",
-    "@typescript-eslint/parser": "4.28.3",
-    "autoprefixer": "10.3.1",
-    "cssnano": "5.0.6",
+    "@types/web": "0.0.24",
+    "@typescript-eslint/eslint-plugin": "4.29.3",
+    "@typescript-eslint/parser": "4.29.3",
+    "autoprefixer": "10.3.2",
+    "cssnano": "5.0.8",
     "del-cli": "4.0.1",
-    "eslint": "7.30.0",
-    "husky": "7.0.1",
-    "lint-staged": "11.0.1",
+    "eslint": "7.32.0",
+    "husky": "7.0.2",
+    "lint-staged": "11.1.2",
     "npm-run-all": "4.1.5",
-    "pm2": "5.1.0",
-    "postcss": "8.3.5",
+    "pm2": "5.1.1",
+    "postcss": "8.3.6",
     "postcss-100vh-fix": "1.0.2",
     "postcss-cli": "8.3.1",
     "prettier": "2.3.2",
-    "tailwindcss": "2.2.4",
+    "tailwindcss": "2.2.7",
     "tailwindcss-padding-safe": "1.0.5",
     "typescript": "4.3.5",
-    "workbox-cli": "6.1.5"
+    "workbox-cli": "6.2.4"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx)": [
