--- a/package.json
+++ b/package.json
@@ -24,29 +24,28 @@
     "postinstall": "remix setup"
   },
   "dependencies": {
-    "@remix-run/node": "0.18.0-pre.1",
-    "@remix-run/react": "0.18.0-pre.1",
-    "@remix-run/vercel": "0.18.0-pre.1",
-    "fathom-client": "3.1.0",
-    "node-fetch": "2.6.1",
-    "react": "18.0.0-alpha-b9964684b-20210824",
-    "react-dom": "18.0.0-alpha-b9964684b-20210824",
+    "@remix-run/node": "0.18.2",
+    "@remix-run/react": "0.18.2",
+    "@remix-run/vercel": "0.18.2",
+    "fathom-client": "3.2.0",
+    "react": "18.0.0-alpha-bc9bb87c2-20210917",
+    "react-dom": "18.0.0-alpha-bc9bb87c2-20210917",
     "react-router": "6.0.0-beta.2",
     "react-router-dom": "6.0.0-beta.2",
-    "remix": "0.18.0-pre.1",
+    "remix": "0.18.2",
     "remix-utils": "1.0.2",
-    "type-fest": "2.1.0"
+    "type-fest": "2.3.3"
   },
   "devDependencies": {
     "@mcansh/eslint-config": "3.1.0",
-    "@remix-run/dev": "0.18.0-pre.1",
-    "@types/node": "16.7.2",
-    "@types/react": "17.0.19",
+    "@remix-run/dev": "0.18.2",
+    "@types/node": "16.9.3",
+    "@types/react": "17.0.21",
     "@types/react-dom": "17.0.9",
-    "@types/web": "0.0.24",
-    "@typescript-eslint/eslint-plugin": "4.29.3",
-    "@typescript-eslint/parser": "4.29.3",
-    "autoprefixer": "10.3.2",
+    "@types/web": "0.0.34",
+    "@typescript-eslint/eslint-plugin": "4.31.1",
+    "@typescript-eslint/parser": "4.31.1",
+    "autoprefixer": "10.3.4",
     "cssnano": "5.0.8",
     "del-cli": "4.0.1",
     "eslint": "7.32.0",
@@ -57,10 +56,10 @@
     "postcss": "8.3.6",
     "postcss-100vh-fix": "1.0.2",
     "postcss-cli": "8.3.1",
-    "prettier": "2.3.2",
-    "tailwindcss": "2.2.7",
+    "prettier": "2.4.1",
+    "tailwindcss": "2.2.15",
     "tailwindcss-padding-safe": "1.0.5",
-    "typescript": "4.3.5"
+    "typescript": "4.4.3"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx)": [
