--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "@remix-run/react": "0.18.2",
     "@remix-run/vercel": "0.18.2",
     "fathom-client": "3.2.0",
-    "react": "18.0.0-alpha-b1a1cb116-20210924",
-    "react-dom": "18.0.0-alpha-b1a1cb116-20210924",
+    "react": "18.0.0-alpha-bdd6d5064-20211001",
+    "react-dom": "18.0.0-alpha-bdd6d5064-20211001",
     "react-router": "6.0.0-beta.3",
     "react-router-dom": "6.0.0-beta.3",
     "remix": "0.18.2",
@@ -39,12 +39,12 @@
   "devDependencies": {
     "@mcansh/eslint-config": "3.1.0",
     "@remix-run/dev": "0.18.2",
-    "@types/node": "16.10.1",
-    "@types/react": "17.0.24",
+    "@types/node": "16.10.2",
+    "@types/react": "17.0.26",
     "@types/react-dom": "17.0.9",
-    "@types/web": "0.0.37",
-    "@typescript-eslint/eslint-plugin": "4.31.2",
-    "@typescript-eslint/parser": "4.31.2",
+    "@types/web": "0.0.38",
+    "@typescript-eslint/eslint-plugin": "4.32.0",
+    "@typescript-eslint/parser": "4.32.0",
     "autoprefixer": "10.3.6",
     "cssnano": "5.0.8",
     "del-cli": "4.0.1",
@@ -55,9 +55,9 @@
     "pm2": "5.1.2",
     "postcss": "8.3.8",
     "postcss-100vh-fix": "1.0.2",
-    "postcss-cli": "9.0.0",
+    "postcss-cli": "9.0.1",
     "prettier": "2.4.1",
-    "tailwindcss": "2.2.16",
+    "tailwindcss": "3.0.0-alpha.1",
     "tailwindcss-padding-safe": "1.0.5",
     "typescript": "4.4.3"
   },
