--- a/package.json
+++ b/package.json
@@ -21,45 +21,43 @@
     "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|graphql|mdx)\"",
     "validate": "run-p lint format type-check",
     "prepare": "husky install",
-    "postinstall": "remix setup"
+    "postinstall": "remix setup node"
   },
   "dependencies": {
-    "@remix-run/node": "0.20.1",
-    "@remix-run/react": "0.20.1",
-    "@remix-run/vercel": "0.20.1",
+    "@remix-run/node": "1.0.5",
+    "@remix-run/react": "1.0.5",
+    "@remix-run/vercel": "1.0.5",
     "fathom-client": "3.2.0",
-    "react": "18.0.0-alpha-bdd6d5064-20211001",
-    "react-dom": "18.0.0-alpha-bdd6d5064-20211001",
-    "react-router": "6.0.0-beta.3",
-    "react-router-dom": "6.0.0-beta.3",
-    "remix": "0.20.1",
-    "remix-utils": "1.0.2",
-    "type-fest": "2.5.2"
+    "react": "18.0.0-beta-c1220ebdd-20211123",
+    "react-dom": "18.0.0-beta-c1220ebdd-20211123",
+    "remix": "1.0.5",
+    "remix-utils": "2.1.0",
+    "type-fest": "2.6.0"
   },
   "devDependencies": {
-    "@mcansh/eslint-config": "3.1.0",
-    "@remix-run/dev": "0.20.1",
-    "@types/node": "16.11.6",
-    "@types/react": "17.0.33",
-    "@types/react-dom": "17.0.10",
-    "@types/web": "0.0.45",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
+    "@mcansh/eslint-config": "3.2.0",
+    "@remix-run/dev": "1.0.5",
+    "@types/node": "16.11.10",
+    "@types/react": "17.0.36",
+    "@types/react-dom": "17.0.11",
+    "@types/web": "0.0.47",
+    "@typescript-eslint/eslint-plugin": "5.4.0",
+    "@typescript-eslint/parser": "5.4.0",
     "autoprefixer": "10.4.0",
-    "cssnano": "5.0.8",
+    "cssnano": "5.0.11",
     "del-cli": "4.0.1",
     "eslint": "7.32.0",
     "husky": "7.0.4",
-    "lint-staged": "11.2.6",
+    "lint-staged": "12.1.2",
     "npm-run-all": "4.1.5",
     "pm2": "5.1.2",
-    "postcss": "8.3.11",
+    "postcss": "8.4.0",
     "postcss-100vh-fix": "1.0.2",
-    "postcss-cli": "9.0.1",
+    "postcss-cli": "9.0.2",
     "prettier": "2.4.1",
-    "tailwindcss": "3.0.0-alpha.1",
+    "tailwindcss": "3.0.0-alpha.2",
     "tailwindcss-padding-safe": "1.0.5",
-    "typescript": "4.4.4"
+    "typescript": "4.5.2"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx)": [
