--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-node_modules
+/node_modules
 *.log
 .DS_Store
-.vercel
+/.vercel
 /.cache
-/server/build
+/.output
+/api/build
 /public/build
 /public/sw.js
 /public/sw.js.map
