--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
   "author": "Logan McAnsh <logan@mcan.sh> (https://mcan.sh)",
   "license": "MIT",
   "sideEffects": false,
-  "main": "remix.config.js",
   "scripts": {
-    "dev": "pm2-dev pm2.config.js",
+    "start": "pm2-dev pm2.config.js",
+    "dev": "remix dev",
     "clean": "del .cache app/styles server/build public/build",
     "prebuild": "run-s clean type-check",
     "build": "run-s build:*",
     "build:css": "postcss styles --base styles --dir app/styles --env production",
     "build:remix": "remix build",
-    "start": "vercel dev",
     "type-check": "tsc",
     "lint": "eslint --cache --fix --ext \".js,.ts,.tsx\" .",
     "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|graphql|mdx)\"",
