--- a/package.json
+++ b/package.json
@@ -10,60 +10,58 @@
   "scripts": {
     "start": "pm2-dev pm2.config.js",
     "dev": "remix dev",
-    "clean": "del .cache app/styles server/build public/build",
+    "clean": "del .cache app/styles api/build public/build",
     "prebuild": "run-s clean type-check",
     "build": "run-s build:*",
     "build:css": "postcss styles --base styles --dir app/styles --env production",
     "build:remix": "remix build",
     "type-check": "tsc",
-    "lint": "eslint --cache --fix --ext \".js,.ts,.tsx\" .",
-    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|graphql|mdx)\"",
+    "lint": "eslint --cache --fix --ext \".js,.ts,.tsx,.jsx,.mts,.cts\" .",
+    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|cts|mts|md|graphql|mdx)\"",
     "validate": "run-p lint format type-check",
     "prepare": "husky install",
     "postinstall": "remix setup node"
   },
   "dependencies": {
-    "@remix-run/node": "1.0.5",
-    "@remix-run/react": "1.0.5",
-    "@remix-run/vercel": "1.0.5",
+    "@remix-run/node": "1.0.6",
+    "@remix-run/react": "1.0.6",
+    "@remix-run/server-runtime": "1.0.6",
+    "@remix-run/vercel": "1.0.6",
     "fathom-client": "3.2.0",
-    "react": "18.0.0-beta-c1220ebdd-20211123",
-    "react-dom": "18.0.0-beta-c1220ebdd-20211123",
-    "remix": "1.0.5",
+    "react": "18.0.0-beta-0cc724c77-20211125",
+    "react-dom": "18.0.0-beta-0cc724c77-20211125",
+    "remix": "1.0.6",
     "type-fest": "2.6.0"
   },
   "devDependencies": {
     "@mcansh/eslint-config": "3.2.0",
-    "@remix-run/dev": "1.0.5",
+    "@remix-run/dev": "1.0.6",
+    "@remix-run/serve": "1.0.6",
     "@types/node": "16.11.10",
-    "@types/react": "17.0.36",
+    "@types/react": "17.0.37",
     "@types/react-dom": "17.0.11",
     "@types/web": "0.0.47",
     "@typescript-eslint/eslint-plugin": "5.4.0",
     "@typescript-eslint/parser": "5.4.0",
     "autoprefixer": "10.4.0",
-    "cssnano": "5.0.11",
+    "cssnano": "5.0.12",
     "del-cli": "4.0.1",
-    "eslint": "7.32.0",
+    "eslint": "8.3.0",
     "husky": "7.0.4",
     "lint-staged": "12.1.2",
     "npm-run-all": "4.1.5",
     "pm2": "5.1.2",
-    "postcss": "8.4.0",
+    "postcss": "8.4.4",
     "postcss-100vh-fix": "1.0.2",
     "postcss-cli": "9.0.2",
-    "prettier": "2.4.1",
+    "prettier": "2.5.0",
     "tailwindcss": "3.0.0-alpha.2",
     "tailwindcss-padding-safe": "1.0.5",
     "typescript": "4.5.2"
   },
   "lint-staged": {
-    "*.+(js|jsx|ts|tsx)": [
-      "prettier --write",
+    "*.+(js|jsx|ts|tsx|cts|mts)": [
       "eslint --fix"
-    ],
-    "*.+(json|yml|yaml|css|less|scss|md|graphql|mdx)": [
-      "prettier --write"
     ]
   }
 }
