--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "pm2-dev pm2.config.js",
     "dev": "remix dev",
-    "clean": "del .cache app/styles api/build public/build",
+    "clean": "del .cache app/styles api/_build public/build",
     "prebuild": "run-s clean type-check",
     "build": "run-s build:*",
     "build:css": "postcss styles --base styles --dir app/styles --env production",
