--- a/package.json
+++ b/package.json
@@ -31,33 +31,33 @@
     "react": "18.0.0-beta-0cc724c77-20211125",
     "react-dom": "18.0.0-beta-0cc724c77-20211125",
     "remix": "1.0.6",
-    "type-fest": "2.6.0"
+    "type-fest": "2.8.0"
   },
   "devDependencies": {
     "@mcansh/eslint-config": "3.2.0",
     "@remix-run/dev": "1.0.6",
     "@remix-run/serve": "1.0.6",
-    "@types/node": "16.11.10",
+    "@types/node": "16.11.12",
     "@types/react": "17.0.37",
     "@types/react-dom": "17.0.11",
-    "@types/web": "0.0.47",
-    "@typescript-eslint/eslint-plugin": "5.4.0",
-    "@typescript-eslint/parser": "5.4.0",
+    "@types/web": "0.0.48",
+    "@typescript-eslint/eslint-plugin": "5.6.0",
+    "@typescript-eslint/parser": "5.6.0",
     "autoprefixer": "10.4.0",
     "cssnano": "5.0.12",
     "del-cli": "4.0.1",
-    "eslint": "8.3.0",
+    "eslint": "8.4.1",
     "husky": "7.0.4",
     "lint-staged": "12.1.2",
     "npm-run-all": "4.1.5",
     "pm2": "5.1.2",
     "postcss": "8.4.4",
     "postcss-100vh-fix": "1.0.2",
-    "postcss-cli": "9.0.2",
-    "prettier": "2.5.0",
-    "tailwindcss": "3.0.0-alpha.2",
+    "postcss-cli": "9.1.0",
+    "prettier": "2.5.1",
+    "tailwindcss": "3.0.1",
     "tailwindcss-padding-safe": "1.0.5",
-    "typescript": "4.5.2"
+    "typescript": "4.5.3"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx|cts|mts)": [
