--- a/package.json
+++ b/package.json
@@ -23,41 +23,42 @@
     "postinstall": "remix setup node"
   },
   "dependencies": {
-    "@remix-run/node": "1.1.1",
-    "@remix-run/react": "1.1.1",
-    "@remix-run/server-runtime": "1.1.1",
-    "@remix-run/vercel": "1.1.1",
-    "fathom-client": "3.2.0",
+    "@remix-run/node": "1.2.1",
+    "@remix-run/react": "1.2.1",
+    "@remix-run/server-runtime": "1.2.1",
+    "@remix-run/vercel": "1.2.1",
+    "clsx": "1.1.1",
+    "fathom-client": "3.4.1",
     "react": "18.0.0-beta-0cc724c77-20211125",
     "react-dom": "18.0.0-beta-0cc724c77-20211125",
-    "remix": "1.1.1",
-    "type-fest": "2.9.0"
+    "remix": "1.2.1",
+    "type-fest": "2.11.2"
   },
   "devDependencies": {
-    "@mcansh/eslint-config": "3.2.0",
-    "@remix-run/dev": "1.1.1",
-    "@remix-run/serve": "1.1.1",
-    "@types/node": "17.0.8",
-    "@types/react": "17.0.38",
+    "@mcansh/eslint-config": "4.0.0",
+    "@remix-run/dev": "1.2.1",
+    "@remix-run/serve": "1.2.1",
+    "@types/node": "17.0.18",
+    "@types/react": "17.0.39",
     "@types/react-dom": "17.0.11",
-    "@types/web": "0.0.48",
-    "@typescript-eslint/eslint-plugin": "5.9.1",
-    "@typescript-eslint/parser": "5.9.1",
+    "@types/web": "0.0.52",
+    "@typescript-eslint/eslint-plugin": "5.12.0",
+    "@typescript-eslint/parser": "5.12.0",
     "autoprefixer": "10.4.2",
-    "cssnano": "5.0.15",
+    "cssnano": "5.0.17",
     "del-cli": "4.0.1",
-    "eslint": "8.6.0",
+    "eslint": "8.9.0",
     "husky": "7.0.4",
-    "lint-staged": "12.1.7",
+    "lint-staged": "12.3.4",
     "npm-run-all": "4.1.5",
-    "pm2": "5.1.2",
-    "postcss": "8.4.5",
+    "pm2": "5.2.0",
+    "postcss": "8.4.6",
     "postcss-100vh-fix": "1.0.2",
     "postcss-cli": "9.1.0",
     "prettier": "2.5.1",
-    "tailwindcss": "3.0.15",
+    "tailwindcss": "3.0.23",
     "tailwindcss-padding-safe": "1.0.5",
-    "typescript": "4.5.4"
+    "typescript": "4.5.5"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx|cts|mts)": [
