--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "@remix-run/vercel": "1.2.3",
     "clsx": "1.1.1",
     "fathom-client": "3.4.1",
-    "react": "18.0.0-beta-0cc724c77-20211125",
-    "react-dom": "18.0.0-beta-0cc724c77-20211125",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "remix": "1.2.3",
     "type-fest": "2.12.0"
   },
