--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@remix-run/vercel": "1.3.4",
     "clsx": "1.1.1",
     "fathom-client": "3.4.1",
+    "isbot": "3.4.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "type-fest": "2.12.2"
