--- a/package.json
+++ b/package.json
@@ -23,42 +23,41 @@
   },
   "dependencies": {
     "@mcansh/remix-secure-headers": "0.3.0",
-    "@remix-run/node": "1.2.3",
-    "@remix-run/react": "1.2.3",
-    "@remix-run/server-runtime": "1.2.3",
-    "@remix-run/vercel": "1.2.3",
+    "@remix-run/node": "1.3.4",
+    "@remix-run/react": "1.3.4",
+    "@remix-run/vercel": "1.3.4",
     "clsx": "1.1.1",
     "fathom-client": "3.4.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "remix": "1.2.3",
-    "type-fest": "2.12.0"
+    "isbot": "3.4.5",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "type-fest": "2.12.2"
   },
   "devDependencies": {
     "@mcansh/eslint-config": "4.0.0",
-    "@remix-run/dev": "1.2.3",
-    "@remix-run/serve": "1.2.3",
-    "@types/node": "17.0.21",
-    "@types/react": "17.0.39",
-    "@types/react-dom": "17.0.13",
-    "@types/web": "0.0.55",
-    "@typescript-eslint/eslint-plugin": "5.14.0",
-    "@typescript-eslint/parser": "5.14.0",
-    "autoprefixer": "10.4.2",
-    "cssnano": "5.1.1",
+    "@remix-run/dev": "1.3.4",
+    "@remix-run/serve": "1.3.4",
+    "@types/node": "17.0.23",
+    "@types/react": "17.0.43",
+    "@types/react-dom": "17.0.14",
+    "@types/web": "0.0.61",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "@typescript-eslint/parser": "5.17.0",
+    "autoprefixer": "10.4.4",
+    "cssnano": "5.1.7",
     "del-cli": "4.0.1",
-    "eslint": "8.10.0",
+    "eslint": "8.12.0",
     "husky": "7.0.4",
-    "lint-staged": "12.3.5",
+    "lint-staged": "12.3.7",
     "npm-run-all": "4.1.5",
     "pm2": "5.2.0",
-    "postcss": "8.4.8",
+    "postcss": "8.4.12",
     "postcss-100vh-fix": "1.0.2",
     "postcss-cli": "9.1.0",
-    "prettier": "2.5.1",
+    "prettier": "2.6.1",
     "tailwindcss": "3.0.23",
     "tailwindcss-padding-safe": "1.0.5",
-    "typescript": "4.6.2"
+    "typescript": "4.6.3"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx|cts|mts)": [
