--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint": "eslint --cache --fix --ext \".js,.ts,.tsx,.jsx,.mts,.cts\" .",
     "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|cts|mts|md|graphql|mdx)\"",
     "validate": "run-p lint format type-check",
-    "prepare": "husky install"
+    "prepare": "is-ci || husky install"
   },
   "dependencies": {
     "@mcansh/remix-secure-headers": "0.5.0",
