--- a/package.json
+++ b/package.json
@@ -22,43 +22,43 @@
     "prepare": "is-ci || husky install"
   },
   "dependencies": {
-    "@mcansh/remix-secure-headers": "0.5.0",
-    "@remix-run/node": "nightly",
-    "@remix-run/react": "nightly",
-    "@remix-run/vercel": "nightly",
+    "@mcansh/remix-secure-headers": "0.6.2",
+    "@remix-run/node": "1.6.3",
+    "@remix-run/react": "1.6.3",
+    "@remix-run/vercel": "1.6.3",
     "clsx": "1.1.1",
-    "fathom-client": "3.4.1",
+    "fathom-client": "3.5.0",
     "is-ci": "3.0.1",
-    "isbot": "3.4.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "type-fest": "2.12.2"
+    "isbot": "3.5.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "type-fest": "2.14.0"
   },
   "devDependencies": {
     "@mcansh/eslint-config": "4.0.0",
-    "@remix-run/dev": "nightly",
-    "@remix-run/serve": "nightly",
-    "@types/node": "17.0.31",
-    "@types/react": "18.0.8",
-    "@types/react-dom": "18.0.3",
-    "@types/web": "0.0.63",
-    "@typescript-eslint/eslint-plugin": "5.22.0",
-    "@typescript-eslint/parser": "5.22.0",
+    "@remix-run/dev": "1.6.3",
+    "@remix-run/serve": "1.6.3",
+    "@types/node": "18.0.0",
+    "@types/react": "18.0.14",
+    "@types/react-dom": "18.0.5",
+    "@types/web": "0.0.68",
+    "@typescript-eslint/eslint-plugin": "5.30.0",
+    "@typescript-eslint/parser": "5.30.0",
     "autoprefixer": "10.4.7",
-    "cssnano": "5.1.7",
+    "cssnano": "5.1.12",
     "del-cli": "4.0.1",
-    "eslint": "8.14.0",
-    "husky": "7.0.4",
-    "lint-staged": "12.4.1",
+    "eslint": "8.18.0",
+    "husky": "8.0.1",
+    "lint-staged": "13.0.3",
     "npm-run-all": "4.1.5",
     "pm2": "5.2.0",
-    "postcss": "8.4.13",
+    "postcss": "8.4.14",
     "postcss-100vh-fix": "1.0.2",
     "postcss-cli": "9.1.0",
-    "prettier": "2.6.2",
-    "tailwindcss": "3.0.24",
+    "prettier": "2.7.1",
+    "tailwindcss": "3.1.4",
     "tailwindcss-padding-safe": "1.0.5",
-    "typescript": "4.6.4"
+    "typescript": "4.7.4"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx|cts|mts)": [
