--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   },
   "dependencies": {
     "@mcansh/remix-secure-headers": "0.6.2",
-    "@remix-run/node": "1.6.3",
-    "@remix-run/react": "1.6.3",
-    "@remix-run/vercel": "1.6.3",
+    "@remix-run/node": "1.6.6-pre.0",
+    "@remix-run/react": "1.6.6-pre.0",
+    "@remix-run/vercel": "1.6.6-pre.0",
     "clsx": "1.1.1",
     "fathom-client": "3.5.0",
     "is-ci": "3.0.1",
@@ -36,8 +36,8 @@
   },
   "devDependencies": {
     "@mcansh/eslint-config": "4.0.0",
-    "@remix-run/dev": "1.6.3",
-    "@remix-run/serve": "1.6.3",
+    "@remix-run/dev": "1.6.6-pre.0",
+    "@remix-run/serve": "1.6.6-pre.0",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
