--- a/package.json
+++ b/package.json
@@ -23,44 +23,45 @@
   },
   "dependencies": {
     "@mcansh/remix-secure-headers": "0.6.2",
-    "@remix-run/node": "1.7.0",
-    "@remix-run/react": "1.7.0",
-    "@remix-run/vercel": "1.7.0",
-    "@vercel/node": "2.5.12",
+    "@remix-run/node": "1.7.3-pre.0",
+    "@remix-run/react": "1.7.3-pre.0",
+    "@remix-run/vercel": "1.7.3-pre.0",
+    "@vercel/node": "2.5.26",
     "clsx": "1.2.1",
     "fathom-client": "3.5.0",
     "is-ci": "3.0.1",
-    "isbot": "3.5.2",
+    "isbot": "3.6.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "type-fest": "2.19.0"
+    "type-fest": "3.1.0"
   },
   "devDependencies": {
-    "@babel/core": "7.18.13",
-    "@mcansh/eslint-config": "4.0.0",
-    "@remix-run/dev": "1.7.0",
-    "@remix-run/serve": "1.7.0",
-    "@types/node": "18.7.14",
-    "@types/react": "18.0.18",
+    "@babel/core": "7.19.6",
+    "@remix-run/dev": "1.7.3-pre.0",
+    "@remix-run/eslint-config": "^1.7.2",
+    "@remix-run/serve": "1.7.3-pre.0",
+    "@types/node": "18.11.2",
+    "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
-    "@types/web": "0.0.72",
-    "@typescript-eslint/eslint-plugin": "5.36.1",
-    "@typescript-eslint/parser": "5.36.1",
-    "autoprefixer": "10.4.8",
+    "@types/web": "0.0.75",
+    "@typescript-eslint/eslint-plugin": "5.40.1",
+    "@typescript-eslint/parser": "5.40.1",
+    "autoprefixer": "10.4.12",
     "cssnano": "5.1.13",
     "del-cli": "5.0.0",
-    "eslint": "8.23.0",
+    "eslint": "8.25.0",
+    "eslint-plugin-prefer-let": "^3.0.1",
     "husky": "8.0.1",
     "lint-staged": "13.0.3",
     "npm-run-all": "4.1.5",
-    "pm2": "5.2.0",
-    "postcss": "8.4.16",
+    "pm2": "5.2.2",
+    "postcss": "8.4.18",
     "postcss-100vh-fix": "1.0.2",
     "postcss-cli": "10.0.0",
     "prettier": "2.7.1",
-    "tailwindcss": "3.1.8",
+    "tailwindcss": "3.2.0",
     "tailwindcss-padding-safe": "1.0.6",
-    "typescript": "4.8.2"
+    "typescript": "4.8.4"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx|cts|mts)": [
