--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   },
   "dependencies": {
     "@mcansh/remix-secure-headers": "0.6.2",
-    "@remix-run/node": "1.7.4",
-    "@remix-run/react": "1.7.4",
-    "@remix-run/vercel": "1.7.4",
+    "@remix-run/node": "1.7.5-pre.0",
+    "@remix-run/react": "1.7.5-pre.0",
+    "@remix-run/vercel": "1.7.5-pre.0",
     "@vercel/node": "2.5.26",
     "clsx": "1.2.1",
     "fathom-client": "3.5.0",
@@ -38,9 +38,9 @@
   },
   "devDependencies": {
     "@babel/core": "7.19.6",
-    "@remix-run/dev": "1.7.4",
-    "@remix-run/eslint-config": "^1.7.4",
-    "@remix-run/serve": "1.7.4",
+    "@remix-run/dev": "1.7.5-pre.0",
+    "@remix-run/eslint-config": "1.7.5-pre.0",
+    "@remix-run/serve": "1.7.5-pre.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
@@ -50,7 +50,7 @@
     "autoprefixer": "10.4.13",
     "del-cli": "5.0.0",
     "eslint": "8.26.0",
-    "eslint-plugin-prefer-let": "^3.0.1",
+    "eslint-plugin-prefer-let": "3.0.1",
     "husky": "8.0.1",
     "lint-staged": "13.0.3",
     "npm-run-all": "4.1.5",
