--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "build:css": "tailwindcss -o app/styles/app.css --minify --postcss",
     "build:remix": "remix build",
     "type-check": "tsc",
-    "lint": "eslint --cache --fix --ext \".js,.ts,.tsx,.jsx,.mts,.cts\" .",
-    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|cts|mts|md|graphql|mdx)\"",
+    "lint": "eslint --ignore-path .gitignore --cache --fix --ext \".js,.ts,.tsx,.jsx,.mts,.cts\" .",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|cts|mts|md|graphql|mdx)\"",
     "validate": "run-p lint format type-check",
     "prepare": "is-ci || husky install"
   },
@@ -54,6 +54,7 @@
     "postcss": "8.4.19",
     "postcss-100vh-fix": "1.0.2",
     "prettier": "2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "3.2.4",
     "tailwindcss-padding-safe": "1.0.6",
     "typescript": "4.9.3"
