--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
-  "name": "mcansh",
-  "description": "personal website for logan mcansh",
-  "version": "2.1.0",
-  "repository": "mcansh/mcan.sh",
+  "private": true,
+  "repository": "https://github.com/mcansh/mcan.sh",
   "homepage": "https://mcan.sh",
   "author": "Logan McAnsh <logan@mcan.sh> (https://mcan.sh)",
   "license": "MIT",
@@ -10,11 +8,12 @@
   "scripts": {
     "clean": "del .cache app/styles/app.css api public/build",
     "dev": "npm run clean && run-p dev:*",
-    "dev:css": "tailwindcss -o app/styles/app.css --watch --postcss",
+    "dev:css": "npm run css -- --watch",
     "dev:remix": "remix dev",
     "build": "run-s clean type-check && run-s build:*",
-    "build:css": "tailwindcss -o app/styles/app.css --minify --postcss",
+    "build:css": "npm run css -- --minify",
     "build:remix": "remix build",
+    "css": "tailwindcss -o app/styles/app.css --postcss",
     "type-check": "tsc",
     "lint": "eslint --ignore-path .gitignore --cache --fix --ext \".js,.ts,.tsx,.jsx,.mts,.cts\" .",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|cts|mts|md|graphql|mdx)\"",
@@ -41,9 +40,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
-    "@types/web": "0.0.79",
-    "@typescript-eslint/eslint-plugin": "5.43.0",
-    "@typescript-eslint/parser": "5.43.0",
+    "@typescript/lib-dom": "npm:@types/web@0.0.79",
     "autoprefixer": "10.4.13",
     "del-cli": "5.0.0",
     "eslint": "8.27.0",
