--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@remix-run/vercel": "1.8.0-pre.1",
     "@vercel/node": "2.6.3",
     "clsx": "1.2.1",
+    "etag": "^1.8.1",
     "fathom-client": "3.5.0",
     "is-ci": "3.0.1",
     "react": "18.2.0",
@@ -37,6 +38,7 @@
     "@remix-run/dev": "1.8.0-pre.1",
     "@remix-run/eslint-config": "1.8.0-pre.1",
     "@remix-run/serve": "1.8.0-pre.1",
+    "@types/etag": "^1.8.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
