--- a/package.json
+++ b/package.json
@@ -22,24 +22,24 @@
   },
   "dependencies": {
     "@mcansh/remix-secure-headers": "0.6.2",
-    "@remix-run/node": "1.8.0-pre.2",
-    "@remix-run/react": "1.8.0-pre.2",
-    "@remix-run/vercel": "1.8.0-pre.2",
-    "@vercel/node": "2.6.3",
+    "@remix-run/node": "1.8.0",
+    "@remix-run/react": "1.8.0",
+    "@remix-run/vercel": "1.8.0",
+    "@vercel/node": "2.7.0",
     "clsx": "1.2.1",
     "etag": "^1.8.1",
     "fathom-client": "3.5.0",
     "is-ci": "3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "type-fest": "3.2.0"
+    "type-fest": "3.3.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "1.8.0-pre.2",
-    "@remix-run/eslint-config": "1.8.0-pre.2",
-    "@remix-run/serve": "1.8.0-pre.2",
+    "@remix-run/dev": "1.8.0",
+    "@remix-run/eslint-config": "1.8.0",
+    "@remix-run/serve": "1.8.0",
     "@types/etag": "^1.8.1",
-    "@types/node": "18.11.9",
+    "@types/node": "18.11.10",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@typescript/lib-dom": "npm:@types/web@0.0.79",
@@ -48,12 +48,12 @@
     "eslint": "8.28.0",
     "eslint-plugin-prefer-let": "3.0.1",
     "husky": "8.0.2",
-    "lint-staged": "13.0.3",
+    "lint-staged": "13.0.4",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.19",
     "postcss-100vh-fix": "1.0.2",
-    "prettier": "2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
+    "prettier": "2.8.0",
+    "prettier-plugin-tailwindcss": "^0.2.0",
     "tailwindcss": "3.2.4",
     "tailwindcss-padding-safe": "1.0.6",
     "typescript": "4.9.3"
