--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
   },
   "dependencies": {
     "@mcansh/remix-secure-headers": "0.6.2",
-    "@remix-run/node": "1.8.0",
-    "@remix-run/react": "1.8.0",
-    "@remix-run/vercel": "1.8.0",
-    "@vercel/node": "2.7.0",
+    "@mcansh/tailwind-var": "^0.1.0",
+    "@remix-run/node": "1.8.2",
+    "@remix-run/react": "1.8.2",
+    "@remix-run/vercel": "1.8.2",
+    "@vercel/node": "2.8.0",
     "clsx": "1.2.1",
     "etag": "^1.8.1",
     "fathom-client": "3.5.0",
@@ -35,28 +36,28 @@
     "type-fest": "3.3.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "1.8.0",
-    "@remix-run/eslint-config": "1.8.0",
-    "@remix-run/serve": "1.8.0",
+    "@remix-run/dev": "1.8.2",
+    "@remix-run/eslint-config": "1.8.2",
+    "@remix-run/serve": "1.8.2",
     "@types/etag": "^1.8.1",
-    "@types/node": "18.11.10",
-    "@types/react": "18.0.25",
+    "@types/node": "18.11.13",
+    "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@typescript/lib-dom": "npm:@types/web@0.0.79",
     "autoprefixer": "10.4.13",
     "del-cli": "5.0.0",
-    "eslint": "8.28.0",
+    "eslint": "8.29.0",
     "eslint-plugin-prefer-let": "3.0.1",
     "husky": "8.0.2",
-    "lint-staged": "13.0.4",
+    "lint-staged": "13.1.0",
     "npm-run-all": "4.1.5",
-    "postcss": "8.4.19",
+    "postcss": "8.4.20",
     "postcss-100vh-fix": "1.0.2",
-    "prettier": "2.8.0",
-    "prettier-plugin-tailwindcss": "^0.2.0",
+    "prettier": "2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "3.2.4",
     "tailwindcss-padding-safe": "1.0.6",
-    "typescript": "4.9.3"
+    "typescript": "4.9.4"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx|cts|mts)": [
