--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@remix-run/eslint-config": "^1.12.0",
     "@remix-run/serve": "^1.12.0",
     "@sentry/cli": "^2.10.0",
+    "@sindresorhus/slugify": "^2.1.1",
     "@types/etag": "^1.8.1",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
