--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   "dependencies": {
     "@mcansh/remix-secure-headers": "0.6.2",
     "@mcansh/tailwind-var": "^0.1.0",
-    "@remix-run/node": "1.10.0-pre.6",
-    "@remix-run/react": "1.10.0-pre.6",
-    "@remix-run/vercel": "1.10.0-pre.6",
-    "@vercel/node": "2.8.4",
+    "@remix-run/node": "0.0.0-nightly-d9ecd5d-20230110",
+    "@remix-run/react": "0.0.0-nightly-d9ecd5d-20230110",
+    "@remix-run/vercel": "0.0.0-nightly-d9ecd5d-20230110",
+    "@vercel/node": "2.8.5",
     "clsx": "1.2.1",
     "etag": "^1.8.1",
     "fathom-client": "3.5.0",
@@ -36,9 +36,9 @@
     "type-fest": "3.5.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "1.10.0-pre.6",
-    "@remix-run/eslint-config": "1.10.0-pre.6",
-    "@remix-run/serve": "1.10.0-pre.6",
+    "@remix-run/dev": "0.0.0-nightly-d9ecd5d-20230110",
+    "@remix-run/eslint-config": "0.0.0-nightly-d9ecd5d-20230110",
+    "@remix-run/serve": "0.0.0-nightly-d9ecd5d-20230110",
     "@types/etag": "^1.8.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
@@ -51,9 +51,9 @@
     "husky": "8.0.3",
     "lint-staged": "13.1.0",
     "npm-run-all": "4.1.5",
-    "postcss": "8.4.20",
+    "postcss": "8.4.21",
     "postcss-100vh-fix": "1.0.2",
-    "prettier": "2.8.1",
+    "prettier": "2.8.2",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "3.2.4",
     "tailwindcss-padding-safe": "1.0.6",
