--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,26 +2,34 @@
 	"exclude": ["./build", "./public/build"],
 	"include": ["remix.env.d.ts", "**/*.ts", "**/*.tsx"],
 	"compilerOptions": {
-		"allowJs": false,
-		"checkJs": false,
+		/* base options */
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"incremental": true,
-		"isolatedModules": true,
-		"jsx": "react-jsx",
-		"lib": ["DOM", "DOM.Iterable", "ES2022"],
-		"moduleResolution": "bundler",
-		"noEmit": true,
-		"noFallthroughCasesInSwitch": true,
-		"resolveJsonModule": true,
 		"skipLibCheck": true,
-		"strict": true,
 		"target": "ES2022",
-		"module": "ES2022",
+		"verbatimModuleSyntax": true,
+		"allowJs": false,
+		"checkJs": false,
+		"resolveJsonModule": true,
+		"moduleDetection": "force",
+		"jsx": "react-jsx",
 		"baseUrl": ".",
-		"paths": {
-			"~/*": ["./app/*"]
-		},
-		"types": ["bun-types"]
+		"paths": { "~/*": ["./app/*"] },
+		"types": ["bun-types"],
+
+		/* strictness */
+		"strict": true,
+		"noUncheckedIndexedAccess": true,
+		"noFallthroughCasesInSwitch": true,
+
+		/* transpiling */
+		"moduleResolution": "Bundler",
+		"module": "ESNext",
+		"noEmit": true,
+		"isolatedModules": true,
+
+		/* where our code runs */
+		"lib": ["DOM", "DOM.Iterable", "ES2022"]
 	}
 }
