--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
 	},
 	"dependencies": {
 		"@mcansh/http-helmet": "^0.8.1",
-		"@remix-run/node": "2.0.0-pre.10",
-		"@remix-run/react": "2.0.0-pre.10",
-		"@remix-run/server-runtime": "2.0.0-pre.10",
+		"@remix-run/node": "2.0.0",
+		"@remix-run/react": "2.0.0",
+		"@remix-run/server-runtime": "2.0.0",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.0.0",
 		"cross-env": "^7.0.3",
@@ -36,8 +36,8 @@
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@remix-run/dev": "2.0.0-pre.10",
-		"@remix-run/eslint-config": "2.0.0-pre.10",
+		"@remix-run/dev": "2.0.0",
+		"@remix-run/eslint-config": "2.0.0",
 		"@types/react": "^18.2.21",
 		"@types/react-dom": "^18.2.7",
 		"@typescript/lib-dom": "npm:@types/web@^0.0.114",
