--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"sideEffects": false,
 	"type": "module",
 	"scripts": {
-		"build": "run-s type-check && node ./scripts/svg.js && remix build",
+		"build": "node ./scripts/svg.js && npm run type-check && remix build",
 		"clean": "./scripts/clean.js",
 		"dev": "remix dev -c \"bun run ./server.ts\"",
 		"type-check": "tsc",
