--- a/package.json
+++ b/package.json
@@ -31,20 +31,20 @@
 		"pretty-cache-header": "^1.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"remix-utils": "7.0.0-pre.3",
-		"zod": "^3.22.2"
+		"remix-utils": "7.0.2",
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
 		"@remix-run/dev": "2.0.1",
 		"@remix-run/eslint-config": "2.0.1",
-		"@types/react": "^18.2.23",
-		"@types/react-dom": "^18.2.8",
-		"@typescript/lib-dom": "npm:@types/web@^0.0.115",
+		"@types/react": "^18.2.27",
+		"@types/react-dom": "^18.2.12",
+		"@typescript/lib-dom": "npm:@types/web@^0.0.116",
 		"autoprefixer": "^10.4.16",
 		"bun-types": "latest",
 		"del": "^7.1.0",
-		"eslint": "^8.50.0",
+		"eslint": "^8.51.0",
 		"eslint-plugin-prefer-let": "^3.0.1",
 		"fs-extra": "^11.1.1",
 		"gitignore-fs": "^2.2.2",
@@ -53,10 +53,10 @@
 		"kleur": "^4.1.5",
 		"lint-staged": "^14.0.1",
 		"npm-run-all": "^4.1.5",
-		"postcss": "^8.4.30",
+		"postcss": "^8.4.31",
 		"postcss-100vh-fix": "^1.0.2",
 		"prettier": "^3.0.3",
-		"prettier-plugin-tailwindcss": "^0.5.4",
+		"prettier-plugin-tailwindcss": "^0.5.5",
 		"svgstore": "^3.0.1",
 		"tailwindcss": "^3.3.3",
 		"tailwindcss-padding-safe": "^1.0.6",
