--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
 	},
 	"dependencies": {
 		"@mcansh/http-helmet": "^0.8.1",
+		"@remix-run/express": "^2.1.0",
 		"@remix-run/node": "0.0.0-nightly-49ddabc-20231025",
 		"@remix-run/react": "0.0.0-nightly-49ddabc-20231025",
+		"@remix-run/serve": "^2.1.0",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.0.0",
 		"cross-env": "^7.0.3",
+		"express": "^4.18.2",
 		"fathom-client": "^3.5.0",
 		"is-ci": "^3.0.1",
 		"isbot": "^3.7.0",
